Correct page side on small devices

--- a/Elements/Page/scss/Styles.scss
+++ b/Elements/Page/scss/Styles.scss
@@ -19,7 +19,7 @@
   }
 
   > div.with-side {
-    @apply flex-col-reverse;
+    @apply flex-col pt-bar @smp:pt-0 @smp:flex-col-reverse;
   }
 
   > div.with-nav {
